syntax = "proto3";

package task;

option go_package = "task-service/proto";

service TaskService {
        //task actions
    rpc CreateTask(CreateTaskRequest) returns (TaskResponse);

    rpc ListTasks(ListTasksRequest) returns (TaskListResponse);

    rpc CompleteTask(CompleteTaskRequest) returns (TaskResponse);

    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}


//task requests
message CreateTaskRequest {
    string title = 1;
    string description = 2;
    string token =3; //JWT token
}

message ListTasksRequest {
    string token = 1; //JWT token
}

message CompleteTaskRequest {
    int32 id = 1;
    string token = 2;
}

message DeleteTaskRequest {
    int32 id = 1;
    string token = 2;
}

//task responses
message Task {
    int32 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message TaskResponse {
    Task task = 1;
}

message TaskListResponse {
    repeated Task tasks = 1;
}

message DeleteTaskResponse {
    string message = 1;
}